Landing page update

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<p>Zoznam stránok, pred ktorými Antivýtrus chráni, máme z webu <a href="https://www.konspiratori.sk">Konšpirátori.sk</a></p>
 						</div>
 						<div>
-							<h3>Ochrana pred dezinformáciami</h3>
+							<h3>Ochráni pred dezinformáciami</h3>
 							<p>Rozšírenie zobrazí upozornenie, keď sa dostanete na stránku s potenciálnym dezinformačným obsahom</p>
 						</div>
 					</div>
@@ -65,12 +65,12 @@
 					</div>
 					<div class="flex-item right">
 						<div>
-							<h3>Tempus nullam</h3>
-							<p>Sed adipiscing ornare risus. Morbi estes<br /> blandit sit et amet, sagittis magna.</p>
+							<h3>Jednoduchá inštalácia</h3>
+							<p>Rozšírenie si do internetového prehliadača nainštalujete veľmi jednoducho podľa nášho návodu</p>
 						</div>
 						<div>
-							<h3>Suscipit nibh dolore</h3>
-							<p>Pellentesque egestas sem. Suspendisse<br /> modo ullamcorper feugiat lorem.</p>
+							<h3>Vyčistí sociálne siete</h3>
+							<p>Antivýtrus namiesto konšpirátorského obsahu zobrazí upozornenie aj na Facebooku</p>
 						</div>
 					</div>
 				</div>
@@ -79,8 +79,9 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style1 special">
 				<div class="inner">
-					<h2>Feugiat lorem</h2>
-					<figure>
+					<h3>Antivýtrus je rozšírenie do internetového prehliadača, ktoré upozorňuje užívateľov na potenciálne nebezpečný konšpiračný obsah. Metodiku konšpiračných stránok sme prevzali od <a href="https://www.konspiratori.sk">konšpirátori.sk</a> s tým, že sme pridali Facebookové stránky konšpiračných webov zo zoznamu, pretože na sociálnych médiách sa dezinformácie šíria najviac. Keď Antivýtrus narazí na stránku zo zoznamu, užívateľovi vyskočí upozornenie, ktoré sa môže rozhodnúť akceptovať alebo ignorovať a na stránku aj tak kliknúť.
+</h3>
+				<!--	<figure>
 					    <blockquote>
 					        "Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra<br /> magna etiam lorem ultricies in diam. Sed arcu cras consequat."
 					    </blockquote>
@@ -88,7 +89,7 @@
 					        <cite class="author">Jane Anderson</cite>
 					        <cite class="company">CEO, Untitled</cite>
 					    </footer>
-					</figure>
+					</figure>-->
 				</div>
 			</section>
 
