--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<nav class="left">
 					<a href="#menu"><span>Menu</span></a>
 				</nav>
-				<a href="index.html" class="logo">Antivýtrus</a>
+				<a href="index.html" class="logo"><img class="header-logo" src="images/logo/logo-header-test.jpg" /></a>
 				<nav class="right">
 					<a href="#" class="button alt">Stiahnuť Antivýtrus</a>
 				</nav>
