--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 				</nav>
 				<a href="index.html" class="logo"><img class="header-logo" src="images/logo/logo-header-test.jpg" /></a>
 				<nav class="right">
-					<a href="#" class="button alt">Stiahnuť Antivýtrus</a>
+					<a href="#" class="button">Stiahnuť Antivýtrus</a>
 				</nav>
 			</header>
 
 		<!-- Menu -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Blog</a></li>
+					<li><a href="index.html">Hlavná stránka</a></li>
+					<li><a href="faq.html">Časté otázky (FAQ)</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
 				<!--<ul class="actions vertical">
@@ -101,26 +101,26 @@
 							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<div class="content">
-							<h3>Consequat</h3>
-							<p>Placerat ornare. Pellentesque od sed euismod in, pharetra ltricies edarcu cas consequat.</p>
+							<h3>Ako nainštalovať?</h3>
+							<p>Prečítajte si jednoduchý návod ako nainštalovať Antivytrus.</p>
 						</div>
 					</div>
+					<div class="flex-item box">
+						<div class="image fit">
+							<img src="images/pic05.jpg" alt="" />
+						</div>
+						<div class="content">
+							<h3><a href="faq.html">Časté otázky (FAQ)</a></h3>
+							<p>Zoznam najčastejších otázok, ktoré súvisia s rozšírením.</p>
+						</div>
+					</div>					
 					<div class="flex-item box">
 						<div class="image fit">
 							<img src="images/pic03.jpg" alt="" />
 						</div>
 						<div class="content">
-							<h3>Adipiscing</h3>
-							<p>Morbi in sem quis dui placerat Pellentesque odio nisi, euismod pharetra lorem ipsum.</p>
-						</div>
-					</div>
-					<div class="flex-item box">
-						<div class="image fit">
-							<img src="images/pic04.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h3>Malesuada</h3>
-							<p>Nam dui mi, tincidunt quis, accu an porttitor, facilisis luctus que metus vulputate sem magna.</p>
+							<h3>Antivýtrus a rodičia</h3>
+							<p>Ako presvedčiť rodičov, aby si Antivytrus nainštalovali aj oni?</p>
 						</div>
 					</div>
 				</div>
