--- a/faq.html
+++ b/faq.html
@@ -5,26 +5,36 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/logo/favicon.png">
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
-				<nav class="left">
-					<a href="#menu"><span>Menu</span></a>
-				</nav>
-				<a href="index.html" class="logo"><img class="header-logo" src="images/logo/logo-header-test.jpg" /></a>
+				<nav class="left">					
+					<a href="index.html" class="logo"><img class="header-logo" src="images/logo/logo.png" /></a>
+				</nav>				
 				<nav class="right">
-					<a href="#" class="button">Stiahnuť Antivýtrus</a>
+						<a class="menu-row" href="faq.html">Časté otázky (FAQ)</a>
+						<a class="menu-row" href="ako-nainstalovat.html">Ako nainštalovať</a>
+					<div class="dropdown">
+						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
+						<div id="myDropdown" class="dropdown-content">
+							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">Google Chrome</a>
+							<a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/">Mozilla Firefox</a>
+						</div>
+					</div>
 				</nav>
+				<a href="#menu" class="mobile-only"><span>Menu</span></a>
 			</header>
 
 		<!-- Menu -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Antivýtrus</a></li>
+					<li><a href="index.html">Hlavná stránka</a></li>
 					<li><a href="faq.html">Časté otázky (FAQ)</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="ako-nainstalovat.html">Ako nainštalovať</a></li>
+					<li><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></li>
 				</ul>
 			</nav>
 
