--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 					<div class="dropdown">
 						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
 						<div id="myDropdown" class="dropdown-content">
-							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">Google Chrome</a>
-							<a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/">Mozilla Firefox</a>
+							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">
+									<img class="small-logo" src="images/addon-buttons/chrome-logo.svg" /> Google Chrome
+							</a>
+							<a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/">
+								<img class="small-logo" src="images/addon-buttons/firefox-logo.svg" /> Mozilla Firefox
+							</a>
 						</div>
 					</div>
 				</nav>
@@ -41,10 +45,11 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="content">
-					<h1>Antivýtrus</h1>
-					<p>Rozšírenie pre webový prehliadač, ktoré vás ochráni pred konšpirátorskými a dezinformačnými stránkami</p>
+					<h1 class="antivytrus">anti<span class="antivytrus-bold">výtrus</span></h1>
+					<p>Rozšírenie pre webový prehliadač, ktoré vás vás a vašich blízkych</br>ochráni pred konšpiračným výtrusom na internete a sociálnych sieťach</p>
 					<ul class="actions">
-						<li><a href="ako-nainstalovat.html" class="button scrolly">To chcem!</a></li>
+						<li><a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl"><img src="images/addon-buttons/chrome-small.png" /></a></li>
+						<li><a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/"><img src="images/addon-buttons/mozilla-small.png" /></a></li>
 					</ul>
 				</div>
 			</section>
@@ -68,7 +73,7 @@
 					<div class="flex-item right">
 						<div>
 							<h3>Jednoduchá inštalácia</h3>
-							<p>Rozšírenie si do internetového prehliadača nainštalujete veľmi jednoducho podľa nášho návodu</p>
+							<p>Rozšírenie si do internetového prehliadača nainštalujete veľmi jednoducho podľa <a href="ako-nainstalovat.html">nášho návodu</a></p>
 						</div>
 						<div>
 							<h3>Vyčistí sociálne siete</h3>
@@ -81,13 +86,31 @@
 		<!-- Two -->
 			<section id="two" class="wrapper style1 special">
 				<div class="inner">
-					<h3>Antivýtrus je založený na podobnom princípe ako starý dobrý antivírus, upozorňuje užívateľov na potenciálne nebezpečenstvá. V našom prípade je to ale konšpiračný obsah.</h3>
+					<h3>Antivýtrus je založený na podobnom princípe ako starý dobrý antivírus, upozorňuje užívateľov na potenciálne nebezpečenstvá. V tomto prípade je to ale konšpiračný obsah.</h3>
 				</div>
 			</section>
 
 		<!-- Three -->
 			<section id="three" class="wrapper">
 				<div class="inner flex flex-3">
+					<div class="flex-item box">
+						<div class="image fit">
+							<img src="images/pic05.jpg" alt="" />
+						</div>
+						<div class="content">
+							<h3><a href="faq.html">Časté otázky (FAQ)</a></h3>
+							<p>Zoznam najčastejších otázok, ktoré súvisia s rozšírením.</p>
+						</div>
+					</div>
+					<div class="flex-item box">
+						<div class="image fit">
+							<img src="images/pic03.jpg" alt="" />
+						</div>
+						<div class="content">
+							<h3><a href="precitajte-si.html">Niečo viac</a></h3>
+							<p>Viac informácií o projekte Antivýtrus.</p>
+						</div>
+					</div>
 					<div class="flex-item box">
 						<div class="image fit">
 							<img src="images/pic02.jpg" alt="" />
@@ -97,39 +120,20 @@
 							<p>Prečítajte si jednoduchý návod ako nainštalovať Antivytrus.</p>
 						</div>
 					</div>
-					<div class="flex-item box">
-						<div class="image fit">
-							<img src="images/pic05.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h3><a href="faq.html">Časté otázky (FAQ)</a></h3>
-							<p>Zoznam najčastejších otázok, ktoré súvisia s rozšírením.</p>
-						</div>
-					</div>					
-					<div class="flex-item box">
-						<div class="image fit">
-							<img src="images/pic03.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h3><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></h3>
-							<p>Ako presvedčiť rodičov, aby si Antivytrus nainštalovali aj oni?</p>
-						</div>
-					</div>
 				</div>
 			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<h2>Ozvite sa nám</h2>
+					<h2>Máte otázku? Ozvite sa nám</h2>
 					<ul class="actions">
-						<li><span class="icon fa-envelope"></span> <a href="mailto:mail@antivytrus.sk">mail@antivytrus.sk</a></li>
+						<li><h3><span class="icon fa-envelope"></span> <a href="mailto:mail@antivytrus.sk">mail@antivytrus.sk</a></h3></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Vivat Vero</br>
+					Vivat Vero &copy; 2020</br>
 					Design <a href="https://templated.co">TEMPLATED</a></br>
-					Obrázky <a href="https://www.vecteezy.com/free-vector/cyber-crime">Cyber Crime Vectors by Vecteezy</a>.
 				</div>
 			</footer>
 
