--- a/faq.html
+++ b/faq.html
@@ -20,8 +20,12 @@
 					<div class="dropdown">
 						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
 						<div id="myDropdown" class="dropdown-content">
-							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">Google Chrome</a>
-							<a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/">Mozilla Firefox</a>
+							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">
+									<img class="small-logo" src="images/addon-buttons/chrome-logo.svg" /> Google Chrome
+							</a>
+							<a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/">
+								<img class="small-logo" src="images/addon-buttons/firefox-logo.svg" /> Mozilla Firefox
+							</a>
 						</div>
 					</div>
 				</nav>
@@ -93,17 +97,14 @@ prehliadačov. Určite však do budúcnosti plánujeme rozšírenie do Mozilla F
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<h2>Ozvite sa nám</h2>
+					<h2>Máte otázku? Ozvite sa nám</h2>
 					<ul class="actions">
-						<!--<li><span class="icon fa-phone"></span> <a href="#">(000) 000-0000</a></li>-->
-						<li><span class="icon fa-envelope"></span> <a href="mailto:mail@antivytrus.sk">mail@antivytrus.sk</a></li>
-						<!--<li><span class="icon fa-map-marker"></span> 123 Somewhere Road, Nashville, TN 00000</li>-->
+						<li><h3><span class="icon fa-envelope"></span> <a href="mailto:mail@antivytrus.sk">mail@antivytrus.sk</a></h3></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Vivat Vero</br>
+					Vivat Vero &copy; 2020</br>
 					Design <a href="https://templated.co">TEMPLATED</a></br>
-					Obrázky <a href="https://www.vecteezy.com/free-vector/cyber-crime">Cyber Crime Vectors by Vecteezy</a>.
 				</div>
 			</footer>
 
