Added picture of cyber crime

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/logo/favicon.png">
+		<link rel="image_src" href="images/cyber-crime.jpg" / >
+		<meta property="og:image" content="images/cyber-crime.jpg"/>
 	</head>
 	<body>
 
