FAQ and read-more pictures

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						</div>
 						<div>
 							<h3>Vyčistí sociálne siete</h3>
-							<p>Antivýtrus namiesto konšpirátorského obsahu zobrazí upozornenie aj na Facebooku</p>
+							<p>Antivýtrus namiesto konšpiračného obsahu zobrazí upozornenie aj na Facebooku</p>
 						</div>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 				<div class="inner flex flex-3">
 					<div class="flex-item box">
 						<div class="image fit">
-							<img src="images/pic05.jpg" alt="" />
+							<img src="images/faq-small.jpg" alt="" />
 						</div>
 						<div class="content">
 							<h3><a href="faq.html">Časté otázky (FAQ)</a></h3>
@@ -106,11 +106,11 @@
 					</div>
 					<div class="flex-item box">
 						<div class="image fit">
-							<img src="images/pic03.jpg" alt="" />
+							<img src="images/book-small.jpg" alt="" />
 						</div>
 						<div class="content">
 							<h3><a href="precitajte-si.html">Niečo viac</a></h3>
-							<p>Viac informácií o projekte Antivýtrus.</p>
+							<p>Prečítajte si viac informácií o projekte Antivýtrus.</p>
 						</div>
 					</div>
 					<div class="flex-item box">
@@ -119,7 +119,7 @@
 						</div>
 						<div class="content">
 							<h3><a href="ako-nainstalovat.html">Ako nainštalovať?</a></h3>
-							<p>Prečítajte si jednoduchý návod ako nainštalovať Antivytrus.</p>
+							<p>Jednoduchý návod ako nainštalovať rozšírenie Antivýtrus.</p>
 						</div>
 					</div>
 				</div>
