--- a/ako-nainstalovat.html
+++ b/ako-nainstalovat.html
@@ -15,8 +15,9 @@
 					<a href="index.html" class="logo"><img class="header-logo" src="images/logo/logo.png" /></a>
 				</nav>				
 				<nav class="right">
-						<a class="menu-row" href="faq.html">Časté otázky (FAQ)</a>
+						<a class="menu-row" href="faq.html">Časté otázky</a>
 						<a class="menu-row" href="ako-nainstalovat.html">Ako nainštalovať</a>
+						<a class="menu-row" href="precitajte-si.html">Blog</a>
 					<div class="dropdown">
 						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
 						<div id="myDropdown" class="dropdown-content">
@@ -39,6 +40,8 @@
 					<li><a href="faq.html">Časté otázky (FAQ)</a></li>
 					<li><a href="ako-nainstalovat.html">Ako nainštalovať</a></li>
 					<li><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></li>
+					<li><a href="precitajte-si.html">Prečítajte si</a></li>
+					<li><a href="o-nas.html">O nás</a></li>
 				</ul>
 			</nav>
 			
