--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 					<a href="index.html" class="logo"><img class="header-logo" src="images/logo/logo.png" /></a>
 				</nav>				
 				<nav class="right">
-						<a class="menu-row" href="faq.html">Časté otázky (FAQ)</a>
+						<a class="menu-row" href="faq.html">Časté otázky</a>
 						<a class="menu-row" href="ako-nainstalovat.html">Ako nainštalovať</a>
+						<a class="menu-row" href="precitajte-si.html">Blog</a>
 					<div class="dropdown">
 						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
 						<div id="myDropdown" class="dropdown-content">
@@ -41,6 +42,8 @@
 					<li><a href="faq.html">Časté otázky (FAQ)</a></li>
 					<li><a href="ako-nainstalovat.html">Ako nainštalovať</a></li>
 					<li><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></li>
+					<li><a href="precitajte-si.html">Prečítajte si</a></li>
+					<li><a href="o-nas.html">O nás</a></li>
 				</ul>
 			</nav>
 
@@ -48,7 +51,7 @@
 			<section id="banner">
 				<div class="content">
 					<h1 class="antivytrus">anti<span class="antivytrus-bold">výtrus</span></h1>
-					<p>Rozšírenie pre webový prehliadač, ktoré vás vás a vašich blízkych</br>ochráni pred konšpiračným výtrusom na internete a sociálnych sieťach</p>
+					<p>Rozšírenie pre webový prehliadač, ktoré vás a vašich blízkych</br>ochráni pred konšpiračným výtrusom na internete a sociálnych sieťach</p>
 					<ul class="actions">
 						<li><a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl"><img src="images/addon-buttons/chrome-small.png" /></a></li>
 						<li><a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/"><img src="images/addon-buttons/mozilla-small.png" /></a></li>
