Add about project page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/logo/favicon.png">
 		<link rel="image_src" href="images/cyber-crime.jpg" / >
-		<meta property="og:image" content="images/cyber-crime.jpg"/>
+		<meta property="og:image" content="https://www.antivytrus.sk/images/cyber-crime-large.png"/>
+		<meta property="og:title" content="Antivýtrus je rozšírenie pre webový prehliadač, ktoré vás a vašich blízkych ochráni pred konšpiračným výtrusom na internete a sociálnych sieťach">
 	</head>
 	<body>
 
@@ -19,9 +20,11 @@
 				<nav class="right">
 						<a class="menu-row" href="faq.html">Časté otázky</a>
 						<a class="menu-row" href="ako-nainstalovat.html">Ako nainštalovať</a>
+						<a class="menu-row" href="o-nas.html">O nás</a>
+						<a class="menu-row" href="o-projekte.html">O projekte</a>
 						<a class="menu-row" href="precitajte-si.html">Blog</a>
 					<div class="dropdown">
-						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
+						<button class="button dropbtn" onclick="dropdownToggle()">Nainštaluj <i class="fa fa-caret-down button-icon"></i></button>
 						<div id="myDropdown" class="dropdown-content">
 							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">
 									<img class="small-logo" src="images/addon-buttons/chrome-logo.svg" /> Google Chrome
@@ -42,7 +45,8 @@
 					<li><a href="faq.html">Časté otázky (FAQ)</a></li>
 					<li><a href="ako-nainstalovat.html">Ako nainštalovať</a></li>
 					<li><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></li>
-					<li><a href="precitajte-si.html">Prečítajte si</a></li>
+					<li><a href="precitajte-si.html">Blog</a></li>
+					<li><a href="o-projekte.html">O projekte</a></li>
 					<li><a href="o-nas.html">O nás</a></li>
 				</ul>
 			</nav>
@@ -118,7 +122,7 @@
 					</div>
 					<div class="flex-item box">
 						<div class="image fit">
-							<img src="images/pic02.jpg" alt="" />
+							<img src="images/computer-small.jpg" alt="" />
 						</div>
 						<div class="content">
 							<h3><a href="ako-nainstalovat.html">Ako nainštalovať?</a></h3>
