--- a/o-projekte.html
+++ b/o-projekte.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Antivýtrus | Rozšírenie pre webový prehliadač, ktoré vás ochráni pred konšpirátorskými a dezinformačnými stránkami</title>
+		<title>Antivýtrus</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,59 +48,7 @@
 				</ul>
 			</nav>
 			
-		<section id="main" class="wrapper">
-			<div class="inner">
-				<header class="align-center">
-					<h1>Prečítajte si</h1>
-					<p>Zopár článkov, ktoré vás môžu zaujať, ak vás zaujal Antivýtrus.</p>
-				</header>
-			</div>
-			
-			<section class="wrapper">
-				<div class="inner flex flex-3">
-					<div class="flex-item box">
-						<div class="image fit">
-							<img src="images/pic02.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h3><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></h3>
-							<p>Ako sa porozprávať s rodičmi o dezinformáciách?</p>
-						</div>
-					</div>
-					<div class="flex-item box">
-						<div class="image fit">
-							<img src="images/computer-small.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h3><a href="ako-nainstalovat.html">Ako nainštalovať?</a></h3>
-							<p>Jednoduchý návod ako nainštalovať rozšírenie Antivýtrus.</p>
-						</div>
-					</div>
-					<div class="flex-item box">
-						<div class="image fit">
-							<img src="images/cyber-crime-grayscale.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h3><a href="o-nas.html">O nás</a></h3>
-							<p>Trošku viac informácií o tom, kto stojí za Antivýtrusom.</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="inner flex flex-3">
-					<div class="flex-item box">
-						<div class="image fit">
-							<img src="images/cyber-crime-grayscale.jpg" alt="" />
-						</div>
-						<div class="content">
-							<h3><a href="o-projekte.html">O projekte</a></h3>
-							<p>Trošku viac informácií o projekte Antivýtrus.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-			
-		</section>
+<p>Info o projekte</p>
 
 		<!-- Footer -->
 			<footer id="footer">
