--- a/ako-nainstalovat.html
+++ b/ako-nainstalovat.html
@@ -17,9 +17,11 @@
 				<nav class="right">
 						<a class="menu-row" href="faq.html">Časté otázky</a>
 						<a class="menu-row" href="ako-nainstalovat.html">Ako nainštalovať</a>
+						<a class="menu-row" href="o-nas.html">O nás</a>
+						<a class="menu-row" href="o-projekte.html">O projekte</a>
 						<a class="menu-row" href="precitajte-si.html">Blog</a>
 					<div class="dropdown">
-						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
+						<button class="button dropbtn" onclick="dropdownToggle()">Nainštaluj <i class="fa fa-caret-down button-icon"></i></button>
 						<div id="myDropdown" class="dropdown-content">
 							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">
 									<img class="small-logo" src="images/addon-buttons/chrome-logo.svg" /> Google Chrome
@@ -40,7 +42,8 @@
 					<li><a href="faq.html">Časté otázky (FAQ)</a></li>
 					<li><a href="ako-nainstalovat.html">Ako nainštalovať</a></li>
 					<li><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></li>
-					<li><a href="precitajte-si.html">Prečítajte si</a></li>
+					<li><a href="precitajte-si.html">Blog</a></li>
+					<li><a href="o-projekte.html">O projekte</a></li>
 					<li><a href="o-nas.html">O nás</a></li>
 				</ul>
 			</nav>
@@ -52,7 +55,7 @@
 					<p>Jednoduchý návod ako si Antivýtrus nainštaluješ do svojho počítača alebo mobilu.</p>
 				</header>
 				<div class="image fit">
-					<img src="images/faq.jpg" alt="" />
+					<img src="images/computer.jpg" alt="" />
 				</div>
 				<h4>Najprv si polož otázku aký internetový prehliadač používaš?</h4>
 				<p>Zatiaľ nám rozšírenie funguje iba na <a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">Google Chrome</a> alebo <a href="https://addons.mozilla.org/sk/firefox/addon/antivytrus/">Mozillu Firefox</a>, čiže ak máš niečo iné, budeš zatiaľ musieť dezinformácie odhaľovať sám. Ak nevieš, pozri sa na ikonku. Google Chrome vyzerá takto: <img class="logo-text" src="images/addon-buttons/chrome-logo.svg" /> a Mozilla Firefox takto: <img class="logo-text" src="images/addon-buttons/firefox-logo.svg" />.</p>
