--- a/o-nas.html
+++ b/o-nas.html
@@ -17,9 +17,11 @@
 				<nav class="right">
 						<a class="menu-row" href="faq.html">Časté otázky</a>
 						<a class="menu-row" href="ako-nainstalovat.html">Ako nainštalovať</a>
+						<a class="menu-row" href="o-nas.html">O nás</a>
+						<a class="menu-row" href="o-projekte.html">O projekte</a>
 						<a class="menu-row" href="precitajte-si.html">Blog</a>
 					<div class="dropdown">
-						<button class="button dropbtn" onclick="dropdownToggle()">Stiahnuť Antivýtrus <i class="fa fa-caret-down button-icon"></i></button>
+						<button class="button dropbtn" onclick="dropdownToggle()">Nainštaluj <i class="fa fa-caret-down button-icon"></i></button>
 						<div id="myDropdown" class="dropdown-content">
 							<a href="https://chrome.google.com/webstore/detail/antivytrussk/llhhdjleiafmdjkiajealflgegoaandl">
 									<img class="small-logo" src="images/addon-buttons/chrome-logo.svg" /> Google Chrome
@@ -40,7 +42,8 @@
 					<li><a href="faq.html">Časté otázky (FAQ)</a></li>
 					<li><a href="ako-nainstalovat.html">Ako nainštalovať</a></li>
 					<li><a href="antivytrus-a-rodicia.html">Antivýtrus a rodičia</a></li>
-					<li><a href="precitajte-si.html">Prečítajte si</a></li>
+					<li><a href="precitajte-si.html">Blog</a></li>
+					<li><a href="o-projekte.html">O projekte</a></li>
 					<li><a href="o-nas.html">O nás</a></li>
 				</ul>
 			</nav>
