--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 					<div class="flex-item image fit round">
-						<img src="images/pic01.jpg" alt="" />
+						<img class="four-picture" src="images/pic01.jpg" alt="" />
 					</div>
 					<div class="flex-item right">
 						<div>
