Switched about us and about project page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="icon" href="images/logo/favicon.png">
 		<link rel="image_src" href="images/cyber-crime.jpg" / >
 		<meta property="og:image" content="https://www.antivytrus.sk/images/cyber-crime-large.png"/>
-		<meta property="og:title" content="Antivýtrus je rozšírenie pre webový prehliadač, ktoré vás a vašich blízkych ochráni pred konšpiračným výtrusom na internete a sociálnych sieťach">
+		<meta property="og:title" content="Antivýtrus je rozšírenie pre webový prehliadač, ktoré vás a vašich blízkych ochráni pred konšpiračným výtrusom na internete">
 	</head>
 	<body>
 
